@@ -1,3 +1,5 @@
+ * drawStr can be configured to scroll or raise an error
+
 1.1.4
  * Merged the Typewriter and MetaConsole classes,
    You now have a virtual cursor with Console and Window objects
